apps/argocd/manifests/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
spec:
  parentRefs:
  - name: internet
    namespace: envoy-gateway-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - c.desertbluffs.com
  rules:
  - backendRefs:
    - name: argocd-server
      port: 443
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
